<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.calvin.kec32.homework1.SimpleCalculator">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Value1TextView"
        android:textSize="20sp"
        android:id="@+id/Value1TextView"
        android:textColor="#000000"
        android:layout_marginTop="40dp"
        android:layout_alignParentTop="true"
        android:layout_toStartOf="@+id/inputNum1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Value2TextView"
        android:id="@+id/Value2TextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/Value1TextView"
        android:layout_toStartOf="@+id/spinner" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/OperatorTextView"
        android:id="@+id/OperatorTextView"
        android:textSize="20sp"
        android:textColor="#000000"
        android:layout_below="@+id/inputNum2"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/CalculateButton"
        android:id="@+id/calculate"
        android:textSize="18sp"
        android:layout_below="@+id/spinner"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputNum1"
        android:layout_above="@+id/Value2TextView"
        android:layout_toEndOf="@+id/OperatorTextView"
        android:text="@string/Value1EditText" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/inputNum2"
        android:text="@string/Value2EditText"
        android:layout_alignTop="@+id/Value2TextView"
        android:layout_toEndOf="@+id/Value2TextView" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner"
        android:entries="@array/OperatorSpinner"
        android:spinnerMode="dropdown"
        android:layout_alignTop="@+id/OperatorTextView"
        android:layout_toEndOf="@+id/OperatorTextView" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/result"
        android:textSize="25sp"
        android:layout_alignBottom="@+id/calculate"
        android:text="@string/AnswerTextView"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/calculate" />

</RelativeLayout>
